# starkiller

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/agents/: frontend-react-specialist.md  senior-fastapi-developer.md
api/: .env.example  Dockerfile  README.md  alembic.ini  config.py  dependencies.py  main.py  pyproject.toml
api/core/: __init__.py  database.py  exceptions.py  logging.py
api/migrations/: env.py
api/migrations/versions/: bc906f4237c3_create_dashboards_table.py
api/mock_data/sales/: monthly_sales_2024.csv
api/models/: __init__.py  base.py  dashboard.py  data_source.py  query.py  visualization.py
api/routes/: __init__.py  dashboards.py  data_sources.py  health.py  query.py
api/schemas/: __init__.py  base.py  dashboard.py  data_source.py  generation.py  query.py  visualization.py
api/scripts/: README.md  seed_connection_data.py  seed_dashboards.py  seed_data_sources.py  seed_quick.py  verify_dashboards.py  view_data_sources.py
api/scripts/mock_data/sales/: monthly_sales_2024.csv
api/services/: __init__.py
api/services/data/: __init__.py  processor.py
api/services/data/connectors/: __init__.py  base.py  csv.py  postgresql.py
api/services/generation/: __init__.py  orchestrator.py
api/services/llm/: __init__.py  anthropic.py  base.py  bedrock.py  gemini.py
api/services/query/: __init__.py  executor.py
api/services/visualization/: __init__.py  generator.py
api/tests/: __init__.py  conftest.py
api/tests/integration/: __init__.py
api/tests/unit/: __init__.py  test_bedrock_provider.py  test_data_sources.py  test_health.py  test_schemas.py
ui/: Dockerfile  index.html  package.json  vite.config.ts
ui/src/: App.tsx
(+34 files in other folders)
